<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraint_layout_song_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorOnPrimary"
    android:layout_marginTop="@dimen/half_margin"
    android:layout_marginBottom="@dimen/half_margin">

    <ImageView
        android:id="@+id/song_handle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:foregroundGravity="center"
        app:srcCompat="@drawable/ic_more_vert_white_18dp"
        android:scaleType="centerInside"
        android:contentDescription="@string/song_menu"
...
