...
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_playlist_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_view_playlist_name"
        app:layout_constraintTop_toTopOf="@+id/text_view_playlist_name"
        android:hint="@string/new_playlist"
        android:autofillHints="@string/new_playlist" />

    <TextView
        android:id="@+id/text_view_playlist_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
...
