...
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/colorPrimary"
        app:titleTextColor="@color/colorOnPrimary"
        />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@id/controls"
        app:layout_constraintLeft_toLeftOf="parent"
...
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:background="@drawable/ic_baseline_pause_24"
            android:backgroundTint="@color/colorPrimary"
            app:iconPadding="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_next"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
...
